--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p class="a">This is a main container element</p>
+	<div class="a">
+	<span>This is a main container element</span>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
